# mcp-crash

./: .env.example  README.md  main.py  pyproject.toml
servers/: weather_server.py
