[project]
name = "mcp-crash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-nvidia-ai-endpoints>=1.4.0",
    "langgraph>=0.3.25",
    "python-dotenv>=1.1.0",
]
